chore: safety commit

--- a/client/src/landingPage.html
+++ b/client/src/landingPage.html
@@ -7,10 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> Hello world! Testing from landingPage.html </h1>
-    <a href='/spotify' className='btn btn-primary'>Log in with Spotify</a>
-    <a href='/spotify/users-liked-songs' className='test'>Next page</a>
-    <a href='/spotify/testing-path' className='test'>Testing Path</a>
+    <h1> Testing from landingPage.html </h1>
+    <!-- <a href='/spotify/users-liked-songs' className='test'>Next page</a> -->
+    <!-- <a href='/spotify/testing-path' className='test'>Testing Path</a> -->
     <a href='/spotify/create-playlist'>Create a new genre playlist</a>
     <!-- <iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/1KXJUpTiNeMv93LrJbbm7G?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe> -->
 </body>
