chore: safety commit before returning to this project

--- a/client/src/landingPage.html
+++ b/client/src/landingPage.html
@@ -11,6 +11,6 @@
     <!-- <a href='/spotify/users-liked-songs' className='test'>Next page</a> -->
     <!-- <a href='/spotify/testing-path' className='test'>Testing Path</a> -->
     <a href='/spotify/create-playlist'>Create a new genre playlist</a>
-    <!-- <iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/1KXJUpTiNeMv93LrJbbm7G?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe> -->
+    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/3Rq3YOF9YG9YfCWD4D56RZ?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
 </body>
 </html>
